appId: tesr.com.userhub
---
# Kısa şifre ile login testi
- launchApp
- tapOn: "Enter your email"
- inputText: "test@example.com"
- tapOn: "Enter your password"
- inputText: "123"
- tapOn: "Login"

# Hata mesajı
- assertVisible: "Password must be at least 6 characters"
